@@ -1,0 +1,11 @@
+Tests/color.svg:2: The attribute 'fill' does not allow the value 'red', replaced with 'black'
+Tests/color.svg:3: The attribute 'fill' does not allow the value 'rgb(0,0,0)', replaced with 'black'
+Tests/color.svg:4: The attribute 'fill' does not allow the value 'rgb(255,255,255)', replaced with 'white'
+Tests/color.svg:5: The attribute 'fill' does not allow the value 'rgb(128,128,182)', replaced with 'black'
+Tests/color.svg:6: The attribute 'fill' does not allow the value '#fff', replaced with 'white'
+Tests/color.svg:7: The attribute 'fill' does not allow the value '#aaa', replaced with 'black'
+Tests/color.svg:8: The attribute 'fill' does not allow the value '#000', replaced with 'black'
+Tests/color.svg:11: The attribute 'fill' does not allow the value '#0a0a0a', replaced with 'black'
+Tests/color.svg:12: The attribute 'fill' does not allow the value 'grey', replaced with 'black'
+Tests/color.svg:13: The attribute 'fill' does not allow the value 'gray', replaced with 'black'
+Tests/color.svg:16: The attribute 'fill' does not allow the value 'unknown', replaced with 'black'
