@@ -4,9 +4,9 @@ Tests/spell.xml:4: Misspelled word 'TITLe' in attribute 'abbrev'
 Tests/spell.xml:4: Misspelled word was found 'dcument'
 Tests/spell.xml:5: Misspelled word 'THis' in attribute 'name'
 Tests/spell.xml:5: Misspelled word 'TItle' in attribute 'name'
-Tests/spell.xml:6: Misspelled word 'Schaad' in attribute 'asciiFullname'
+Tests/spell.xml:6: Misspelled word 'Schaadx' in attribute 'asciiFullname'
 Tests/spell.xml:6: Misspelled word 'YYY' in attribute 'asciiSurname'
-Tests/spell.xml:6: Misspelled word 'Schaad' in attribute 'surname'
+Tests/spell.xml:6: Misspelled word 'Schaadx' in attribute 'surname'
 Tests/spell.xml:7: Misspelled word was found 'Orgg'
 Tests/spell.xml:7: Misspelled word was found 'affilliation'
 Tests/spell.xml:12: Misspelled word 'Xtxt' in attribute 'ascii'
