@@ -1,0 +1,22 @@
+Tests/svg.xml:3: The attribute 'fill' does not allow the value 'red', replaced with 'black'
+Tests/svg.xml:4: The attribute 'fill' does not allow the value 'rgb(0,0,0)', replaced with 'black'
+Tests/svg.xml:5: The attribute 'fill' does not allow the value 'rgb(255,255,255)', replaced with 'white'
+Tests/svg.xml:6: The attribute 'fill' does not allow the value 'rgb(128,128,182)', replaced with 'black'
+Tests/svg.xml:7: The attribute 'fill' does not allow the value '#fff', replaced with 'white'
+Tests/svg.xml:8: The attribute 'fill' does not allow the value '#aaa', replaced with 'black'
+Tests/svg.xml:9: The attribute 'fill' does not allow the value '#000', replaced with 'black'
+Tests/svg.xml:12: The attribute 'fill' does not allow the value '#0a0a0a', replaced with 'black'
+Tests/svg.xml:13: The attribute 'fill' does not allow the value 'grey', replaced with 'black'
+Tests/svg.xml:14: The attribute 'fill' does not allow the value 'gray', replaced with 'black'
+Tests/svg.xml:17: The attribute 'fill' does not allow the value 'unknown', replaced with 'black'
+Tests/svg.xml:20: The attribute 'fill' does not allow the value 'red', replaced with 'black'
+Tests/svg.xml:21: The attribute 'fill' does not allow the value 'rgb(0,0,0)', replaced with 'black'
+Tests/svg.xml:22: The attribute 'fill' does not allow the value 'rgb(255,255,255)', replaced with 'white'
+Tests/svg.xml:23: The attribute 'fill' does not allow the value 'rgb(128,128,182)', replaced with 'black'
+Tests/svg.xml:24: The attribute 'fill' does not allow the value '#fff', replaced with 'white'
+Tests/svg.xml:25: The attribute 'fill' does not allow the value '#aaa', replaced with 'black'
+Tests/svg.xml:26: The attribute 'fill' does not allow the value '#000', replaced with 'black'
+Tests/svg.xml:29: The attribute 'fill' does not allow the value '#0a0a0a', replaced with 'black'
+Tests/svg.xml:30: The attribute 'fill' does not allow the value 'grey', replaced with 'black'
+Tests/svg.xml:31: The attribute 'fill' does not allow the value 'gray', replaced with 'black'
+Tests/svg.xml:34: The attribute 'fill' does not allow the value 'unknown', replaced with 'black'
