@@ -3,7 +3,7 @@
   <front>
     <title ascii="THis is also the title" abbrev="Short TITLe">This is the title of the dcument</title>
     <seriesInfo name="THis is the series Info TItle" asciiName="This is also the name" asciiValue="Should not be here" stream="IETF" value="XXX"/>
-    <author asciiFullname="Jim Schaad" asciiInitials="X.X" asciiSurname="YYY" fullname="Its my name" initials="XX" surname="Schaad">
+    <author asciiFullname="Jim Schaadx" asciiInitials="X.X" asciiSurname="YYY" fullname="Its my name" initials="XX" surname="Schaadx">
       <organization>
         Orgg is an affilliation of text
       </organization>
@@ -127,7 +127,7 @@
       </ul>
       <section>
         <artwork>
-          <svg height="100" width="100" datatype="foobar" xmlns="http://www.w3.org/2000/svg">
+          <svg height="100" width="100" datatype="foobar" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
             <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="black"/>
             <desc>Text goes here -- finish expanding</desc>
           </svg>
