@@ -1,6 +1,6 @@
 
 # Static values
-__version__  = '0.5.14'
+__version__  = '0.5.15'
 NAME         = 'rfclint'
 VERSION      = [ int(i) if i.isdigit() else i for i in __version__.split('.') ]
 
