@@ -1,3 +1,9 @@
+rfclint (0.5.15) distribution(s); urgency=low
+
+	* Add svgcheck to rfclint
+
+-- Jim Schaad <ietf@augustcellars.com>  Sat 1 Jun 2019 12:00:00 -0700
+
 rfclint (0.5.14) distribution(s); urgency=low
 
 	* Clean up so that pyflakes is happy
